Desarrollo del navbar y la portada del sitio

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,18 +8,19 @@
 
 </head>
 <body>
-    <h1 id="texto">Hola</h1>
-    <script src="script.js"></script>
     <div class="inicio">
-        <img class="logo" src="images/logonegativo.svg" alt="">
-        <nav  class="navbar">
+        <img class="logo" src="images/logonegativo.svg" alt="logo en negativo">
+        <nav class="navbar">
             <button type="button" class="button-navbar">Conocenos</button>
             <button type="button" class="button-navbar">Eventos</button>
             <button type="button" class="button-navbar">Contacto</button>
         </nav>
     </div>
-    <div class="portada">
-        <span>Conferencias a las que puedes asistir</span>
+    <div class="contenedor-portada">
+        <div class="portada">
+            <span id="texto"></span>
+            <script src="script.js"></script>
+        </div>
     </div>
 </body>
 </html>
