Modificacion de los botones

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,8 @@
         </video>
         <nav class="navbar">
             <img class="logo" src="images/clickcontrol.svg" alt="logo en negativo">
-            <button type="button" class="button-navbar"><a href="aboutUs.html">About Us</a></button>
+            <button type="button" class="button-navbar">Inicio</button>
+            <button type="button" class="button-navbar">About Us</button>
             <button type="button" class="button-navbar">Eventos</button>
             <button type="button" class="button-navbar">Contacto</button>
         </nav>
