creacion de pagina about, fotos y texto en ingles

--- a/frontend/pages/aboutUs.html
+++ b/frontend/pages/aboutUs.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sobre Nosotros | Click Control</title>
+<link rel="stylesheet" href="aboutUs.css">
 </head>
 <body>
-    <h1>Hola</h1>
-    <h2>Hola</h2>
+
+<header>
+    <h1>Sobre Nosotros</h1>
+    <p>Conoce al equipo detrás de Click Control — Tecnología, Creatividad y Pasión por los Eventos</p>
+</header>
+
+<main>
+    <section>
+        <h2>Nuestra Historia</h2>
+        <p>
+            <strong>Click Control</strong>  It was born from the idea of ​​uniting event programming and organization into a single concept. Our team is made up of young, creative individuals passionate about technology, committed to offering modern digital solutions and unique experiences at every event we produce.
+        </p>
+    </section>
+
+    <section class="valores">
+        <div class="caja">
+            <h3>Misión</h3>
+            <p>
+                Our mission is to create lasting web applications that are connected to the realities of each of our clients, fostering real and effective growth in their projects. We also organize and produce all types of events with a creative and strategic approach, adapting to the specific needs of each client. Our commitment is to provide unique experiences and superior technological services, building relationships of trust and delivering results that exceed the expectations of those who choose us.
+        </div>
+
+        <div class="caja">
+            <h3>Visión</h3>
+            <p>
+                We aspire to establish ourselves as a leading company in web development and event organization, both nationally and internationally. We want Click Control to be recognized for its innovative capabilities, excellence in every project, and the versatility that allows us to operate both digitally and in person.
+
+            </p>
+        </div>
+    </section>
+
+    <section>
+        <h2>Nuestro Equipo</h2>
+
+        <div class="equipo">
+            <div class="miembro">
+                <img src="../images/Alvaro.jpg" alt="Foto de Álvaro Rojas">
+                <h3>Alvaro rojas</h3>
+                <p>CEO. Visionary and strategic business leader with experience in leading teams and organizations to success.</p>
+            </div>
+
+            <div class="miembro">
+                <img src="../images/naty.webp" alt="Foto de Natalia jaen">
+                <h3>Natalia jaen</h3>
+                <p>Database administrator. Experienced in the design, implementation, and administration of relational and SQL databases.</p>
+            </div>
+
+            <div class="miembro">
+                <img src="../images/ixchel.webp" alt="Foto de ixhel chavez">
+                <h3>Ixchel Chavez</h3>
+                <p>Web developer. Passionate and creative with experience in design and programming of applications and websites</p>
+            </div>
+
+            <div class="miembro">
+                <img src="../images/camilo_1.jpg" alt="Foto de Jackson moreno">
+                <h3>Jackson moreno</h3>
+                <p>Event manager and digital marketing specialist. Passionate about communication, innovation, and technology networks.</p>
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer>
+    &copy; 2025 Click Control — Todos los derechos reservados.
+</footer>
+
 </body>
 </html>
