Cambio de frase, efecto difuminado al main y cambio de colores del navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,9 @@
         </video>
         <nav class="navbar">
             <img class="logo" src="images/clickcontrol.svg" alt="logo en negativo">
-            <button type="button" class="button-navbar">Inicio</button>
-            <button type="button" class="button-navbar">About Us</button>
-            <button type="button" class="button-navbar">Eventos</button>
-            <button type="button" class="button-navbar">Contacto</button>
+            <button type="button" class="button-navbar"><a href="pages/eventos.html">About Us</a></button>
+            <button type="button" class="button-navbar"><a href="">Eventos</a></button>
+            <button type="button" class="button-navbar"><a href="">Contacto</a></button>
         </nav>
         <div class="contenedor-portada">
             <div class="portada">
@@ -27,5 +26,13 @@
             </div>
         </div>
     </div>
+    <div class="contenedor">
+        <p>hola</p>
+    </div>
+    <footer>
+        <div class="footer-contenedor">
+
+        </div>
+    </footer>
 </body>
 </html>
