Efecto difuminado en el fondo del main de eventos

--- a/frontend/pages/eventos.html
+++ b/frontend/pages/eventos.html
@@ -49,7 +49,7 @@
                     <h2>Feria tecnologica</h2>
                     <!-- <img src="../images/clickcontrol.png" alt="icono"> -->
                     <p>
-                        Reunete a empresas, startups y universidades para mostrar las últimas tendencias e innovaciones del sector digital.
+                        Reunete con empresas, startups y universidades para mostrar las últimas tendencias e innovaciones del sector digital.
                         Explora nuevos productos, participa en demostraciones y descubre oportunidades para impulsar tu carrera o negocio.
                     </p>
                     <button class="button-contenedor">Inscribete</button>
