integracion de java con msql

--- a/frontend/formulario.html
+++ b/frontend/formulario.html
@@ -42,7 +42,7 @@
         <div class="grupo">
             <div>
                 <label>Tipo de evento *</label>
-                <select name="eventos" id="eventos" multiple required>
+                <select name="eventos[]" id="eventos" multiple required>
                     <option value="">Seleccione...</option>
                     <option value="Conferencia">Conferencia de programadores Web</option>
                     <option value="Seminario">Seminario de IA</option>
