subtitulos en ingles

--- a/frontend/pages/aboutUs.html
+++ b/frontend/pages/aboutUs.html
@@ -23,13 +23,13 @@
 
     <section class="valores">
         <div class="caja">
-            <h3>Misión</h3>
+            <h3>Mission</h3>
             <p>
                 Our mission is to create lasting web applications that are connected to the realities of each of our clients, fostering real and effective growth in their projects. We also organize and produce all types of events with a creative and strategic approach, adapting to the specific needs of each client. Our commitment is to provide unique experiences and superior technological services, building relationships of trust and delivering results that exceed the expectations of those who choose us.
         </div>
 
         <div class="caja">
-            <h3>Visión</h3>
+            <h3>Vision</h3>
             <p>
                 We aspire to establish ourselves as a leading company in web development and event organization, both nationally and internationally. We want Click Control to be recognized for its innovative capabilities, excellence in every project, and the versatility that allows us to operate both digitally and in person.
 
